--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-<p>Hello World!</p>
+<!DOCTYPE HTML>
+<html>
+  <head>
+    <title>Page title</title>
+    <meta charset="utf-8">
+
+  </head>
+  <body>
+    <p>Hello world!</p>
+  </body>
+
+</html>
